[package]
name = "githubdrainer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "githubdrainer"
path = "src/main.rs"
test = true

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
clap = "2.33"
csv = "1.1.5"